Thu Jul 23 10:30:12 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/fileops.c: tell the PDB that gimp_register_magic_load_handler
	takes 4 args

Thu Jul 23 01:53:09 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/rect_select.c: Display the selection-mode in the statusbar.
	* app/session.c: Restoring saved sessions works again.

Wed Jul 22 23:32:50 MEST 1998 Sven Neumann <sven@gimp.org>

        * docs/quick_reference.ps
        * docs/quick_reference.tar.gz: 
        Updated the Quick Reference Sheet to the much improved version made 
        by Sven Anders <anderss@fmi.uni-passau.de>.

Tue Jul 21 18:32:19 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/tile.c app/tile_swap.c: Squashed a deadlock.  I hope.

Tue Jul 21 02:11:47 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/app_procs.c
	* app/devices.[ch]
	* app/session.[ch]: added session-managment support to the
	device-status-dialog. The restore-function is still not working, 
	will have a look at it tomorrow...

Mon Jul 20 21:35:33 BST 1998 Adam D. Moss <adam@gimp.org>

	*  plug-ins/animationplay/animationplay.c: UI tweaks.

Mon Jul 20 20:13:58 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/rect_selectP.h
	* app/rect_select.h
	* app/rect_select.c: The new "Fixed Size" option now works with
	ellipse_select too. Made the entries use spinbuttons. Minor change
	to the selection_size indicator in the status-bar.

	* plug-ins/png/png.c: made fopen() use "rb" and "wb" instead if "r"
	and "w" since the OS/2 port needs it

Mon Jul 20 11:07:32 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/app_procs.c
	* app/interface.c: Changed progressbar updaters to work with
	new API.  THIS WILL NOT WORK WITH OLDER GTK+.  SOMEONE NEEDS
	TO MAKE AN ENTRY IN gtkfeatures.h SO WE CAN #ifdef THIS.
	(I suppose I should... but what can I say - I'm lazy)

Mon Jul 20 06:27:18 PDT 1998  Jay Cox <jaycox@earthlink.net>

	* app/brush_select.c app/gimpbrush.c app/gimpbrush.h
	* app/gimpbrushgenerated.c app/gimpbrushlist.c