@@ -1,3 +1,8 @@
+Thu Jul 23 20:29:40 MEST 1998 Sven Neumann <sven@gimp.org>
+
+	* app/edit_selection.c: Display the move offset in the statusbar.
+	* app/rect_select.c: Some code cleanup.
+
 Thu Jul 23 10:30:12 PDT 1998 Manish Singh <yosh@gimp.org>
 
 	* app/fileops.c: tell the PDB that gimp_register_magic_load_handler
